# Cmaka_learn

./: CMakeLists.txt  README.md  main.cpp
print/: CMakeLists.txt
print/include/: print.h
print/src/: print.cpp
rectangles/: CMakeLists.txt
rectangles/include/: rectangle.h
rectangles/src/: rectangle.cpp
