cmake_minimum_required(VERSION 3.26)
project(cmake_learn VERSION 1.0.0)

set(CMAKE_CXX_STANDARD 20)
set(Name "Ahmed Ibrahim")
set(Age 22)
set(Height 140)
set(Friends Saleh Tarek Fahmy)
add_subdirectory(rectangles)
add_subdirectory(print)
#message("Hello ${Name} ,my Age = ${Age} , my Height = ${Height}, My Friends = "${Friends})

add_executable(cmake_learn main.cpp)
target_link_libraries(cmake_learn PUBLIC rect_lib print_lib)
set(VAR a)
while (NOT VAR STREQUAL "aaaaaaa")
    set(VAR ${VAR}a)
    message(${VAR})
endwhile ()

foreach (X RANGE 10 100 5)
    message("X = ${X}")
endforeach ()

message("for Each in multiple List")
set(VAR1 0;1;2;3)
set(VAR2 10;11;12;13)
set(VAR3 "14;15;16")
foreach (X IN LISTS VAR1 VAR2 VAR3)
    message("X = ${X}")
endforeach ()

